k8s/comment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-svc
  namespace: bookreview
spec:
  type: NodePort
  selector:
    app: comment
  ports:
    - protocol: TCP
      port: ${APP_PORT}
