k8s/comment-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bookcomment
  namespace: bookreview
spec:
  host: bookcomment-bookreview.apps-crc.testing
  path: /
  to:
    kind: Service
    name: comment-svc
    weight: 100
  port:
    targetPort: 8081
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIEkjCCAvqgAwIBAgIRAP7DAbSRM4fO+ez+3822nTgwDQYJKoZIhvcNAQELBQAw
[...]
      FH5NsLhX2KLHtD1D2mEM4ryMTw5ELQ==
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDNpj0Xgj54hILX
[...]
      ioGxtnoJFL5OuWrjpif94lLPXw==
      -----END PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFFzCCA3+gAwIBAgIQAwcshWQKnVyhlqdfcexqLzANBgkqhkiG9w0BAQsFADCB
[...]
      OJkSXv3EEjqUPgk=
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
